style: fix overflow

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -40,6 +40,7 @@
       border-radius: 50%;
       color: var(--mainBlack);
       font-size: 0.65rem;
+      overflow: hidden;
     }
   }
 }
